Style header and added images/vectors for the hero

--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Stravia - Homepage</title>
 </head>
+
 <body>
-    
+    <div class="hero">
+        <header class="header">
+            <a href="">
+                <img src="images/stravia-logo.svg"/>
+            </a>
+            <div class="header-right">
+                <div class="header-links">
+                    <a href="-">SERVICES</a>
+                    <a href="-">ABOUT US</a>
+                    <a href="-">RESOURCES</a>
+                    <a href="-">CONTACT</a>
+                </div>
+                <button type="button">BOOK A FREE SESSION</button>
+            </div>
+        </header>
+        
+        <div class="hero-content">
+            <h1>STEP INTO YOUR STRENGTH WITH STRAVIA</h1>
+            <h2>TRANSFORM YOUR BODY AND YOUR LIFE</h2>
+            <p>At Stravia, we celebrate the strength and resilience of women. Join our empowering community and discover personalized training programs, supportive classes, and a vibrant atmosphere designed to uplift and inspire you.</p>
+            <button type="button">BOOK A FREE SESSION</button>
+        </div>
+
+        <div class="hero-background">
+            <img src="images/hero-background.svg">
+            <img src="images/hero-photo.png">
+
+        </div>
+    </div>
 </body>
 </html>
