Finish styling hero section

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                     <a href="-">RESOURCES</a>
                     <a href="-">CONTACT</a>
                 </div>
-                <div class="header-button">
-                    <img src="images/Device=Desktop, Button=Secondary, State=Default.svg">
-                </div>
+                <button>Book a free session</button>
             </div>
         </header>
 
@@ -39,9 +37,7 @@
             <h1>STEP INTO YOUR <span>STRENGTH</span> WITH STRAVIA</h1>
             <h4>TRANSFORM YOUR BODY AND<span> YOUR LIFE</span></h4>
             <p>At Stravia, we celebrate the strength and resilience of women. Join our empowering community and discover personalized training programs, supportive classes, and a vibrant atmosphere designed to uplift and inspire you.</p>
-            <div class="content-button">
-                <img src="images/Device=Desktop, Button=Primary, State=Default.svg">
-            </div>
+            <button>Book a free session</button>
         </div>
 
         <div class="hero-background">
