Test header widhts and heigths in % instead of px

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="hero">
         <header class="header">
-            <a href="">
+            <a href="" class="logo-container">
                 <img src="images/stravia-logo.svg"/>
             </a>
             <div class="header-right">
